--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 (´・◡・｀)
             </div>
             <div class="footer">
-                &copy; huj
+                &copy; ALL RIGHTS RESERVED
                 <div class="smallfooter">2020-2021</div>
             </div>
         </div>
