--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="Diamux" property="og:site_name">
-    <meta content="Diamux" property="og:title">
+    <meta content="kxcperr" property="og:site_name">
+    <meta content="kxcperr" property="og:title">
     <meta property="og:url" content="http://twitter.com/Diamux71">
     <meta content="A really simple website" property="og:description">
     <meta content="https://cdn.discordapp.com/attachments/771807142541000708/824229856782712842/86e8c5ca210e1d156aca56105b77e98b.png" property="og:image">
@@ -21,19 +21,19 @@
         <div class="container">
             <div class="topnav" id="myTopnav">
             <ul class="topnav">
-                <li><a target="_blank" href="https://discord.gg/troll" title="Diamux#1459" class="discord">Discord</a></li>
+                <li><a target="_blank" href="https://discord.gg/troll" title="rebellious#4871" class="discord">Discord</a></li>
                 <li><a target="_blank" href="https://github.com/Diamux/diamux.tk" title="daimaiamux" class="github">GitHub</a></li>
-                <li><a target="_blank" href="https://twitter.com/Diamux71" title="@Diamux71" class="twitter">Twitter</a></li>
-                <li><a target="_blank" href="https://www.instagram.com/diamux70" title="Diamux70" class="instagram">Instagram</a></li>
-                <li><a target="_blank" href="https://www.youtube.com/channel/UCw7KQbryheOu0MUyJ50fT8Q" title="Diamux" class="youtube">YouTube</a></li>
-                <li class="right"><a class="right" title="Just why?">Diamux</a></li>
+                <li><a target="_blank" href="https://twitter.com/kxcperrosu" title="@kxcperrosu" class="twitter">Twitter</a></li>
+                <li><a target="_blank" href="https://www.instagram.com/kxcperrosu" title="kxcperrosu" class="instagram">Instagram</a></li>
+                <li><a target="_blank" href="https://www.youtube.com/channel/UCCVgdgBvpApxn7sVjvt9ttA" title="kxcperr" class="youtube">YouTube</a></li>
+                <li class="right"><a class="right" title="Just why?">kxcperr</a></li>
             </ul>
             </div>
             <div class="text">
                 (´・◡・｀)
             </div>
             <div class="footer">
-                &copy; ALL RIGHTS RESERVED
+                &copy; Made by Diamux
                 <div class="smallfooter">2020-2021</div>
             </div>
         </div>
