--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="kxcperr" property="og:site_name">
     <meta content="kxcperr" property="og:title">
-    <meta property="og:url" content="http://twitter.com/Diamux71">
+    <meta property="og:url" content="http://twitter.com/kxcperrosu">
     <meta content="A really simple website" property="og:description">
     <meta content="https://cdn.discordapp.com/attachments/771807142541000708/824229856782712842/86e8c5ca210e1d156aca56105b77e98b.png" property="og:image">
     <meta name="theme-color" content="#23005B">
