--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta content="kxcperr" property="og:site_name">
     <meta content="kxcperr" property="og:title">
     <meta property="og:url" content="http://twitter.com/kxcperrosu">
-    <meta content="A really simple website" property="og:description">
-    <meta content="https://cdn.discordapp.com/attachments/771807142541000708/824229856782712842/86e8c5ca210e1d156aca56105b77e98b.png" property="og:image">
+    <meta content="kecel gejek" property="og:description">
+    <meta content="https://cdn.discordapp.com/avatars/512292356528144395/9c8dd9ac7f911c40e80d8a8f419edc6c.jpg?size=1024" property="og:image">
     <meta name="theme-color" content="#23005B">
     <link rel="stylesheet" href="main.css">
     <link rel="icon" href="https://cdn.discordapp.com/emojis/719038391622303804.png">
-    <title>Diamux</title>
+    <title>kxcperr</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -22,7 +22,7 @@
             <div class="topnav" id="myTopnav">
             <ul class="topnav">
                 <li><a target="_blank" href="https://discord.gg/troll" title="rebellious#4871" class="discord">Discord</a></li>
-                <li><a target="_blank" href="https://github.com/Diamux/diamux.tk" title="daimaiamux" class="github">GitHub</a></li>
+                <li><a target="_blank" href="https://github.com/ariuxosu/nie-wiem" title="daimaiamux" class="github">GitHub</a></li>
                 <li><a target="_blank" href="https://twitter.com/kxcperrosu" title="@kxcperrosu" class="twitter">Twitter</a></li>
                 <li><a target="_blank" href="https://www.instagram.com/kxcperrosu" title="kxcperrosu" class="instagram">Instagram</a></li>
                 <li><a target="_blank" href="https://www.youtube.com/channel/UCCVgdgBvpApxn7sVjvt9ttA" title="kxcperr" class="youtube">YouTube</a></li>
