--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </ul>
             </div>
             <div class="text">
-                (´・◡・｀)
+               ianskiemu brakuje 64pp do snipniecia kosiary
             </div>
             <div class="footer">
                 &copy; Made by Diamux
