--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <li><a target="_blank" href="https://www.youtube.com/channel/UCCVgdgBvpApxn7sVjvt9ttA" title="kxcperr" class="youtube">YouTube</a></li>
                 <li><a target="_blank" href="https://osu.gatari.pw/u/22680" title="Gatari" class="gatari">Gatari</a></li>
                 <li><a target="_blank" href="https://www.twitch.tv/kxcperrosu" title="Twitch" class="twitch">Twitch</a></li>
+                <li><a target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" title="Cool thing" class="coolthing">Cool thing</a></li>
                 <li class="right"><a class="right" title="Just why?">kxcperr</a></li>
             </ul>
             </div>
