--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </ul>
             </div>
             <div class="text">
-               Welcome to kxcperr.tk!
+               ianski to menel
             </div>
             <div class="footer">
                 &copy; Credits to Diamux
